--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.github.tamir7.contacts:contacts:1.1.7'
     compile 'com.android.support:cardview-v7:26.+'
+    compile 'gun0912.ted:tedpermission:2.0.3'
     testCompile 'junit:junit:4.12'
 }
